# tonic-build-bazel-example

./: Cargo.toml  MODULE.bazel
client/: BUILD.bazel  Cargo.toml  build.rs
client/src/: main.rs
protos/: BUILD.bazel  hello.proto
protos/hello/: BUILD.bazel  Cargo.toml  build.rs
server/: BUILD.bazel  Cargo.toml  build.rs
server/src/: hello.rs  main.rs
