module(
    name = "rust-grpc",
    version = "0.1.0",
)

bazel_dep(name = "protobuf", version = "23.1")
bazel_dep(name = "rules_rust", version = "0.48.0")

crate = use_extension("@rules_rust//crate_universe:docs_bzlmod.bzl", "crate")
crate.from_cargo(
    name = "crate",
    cargo_lockfile = "//:Cargo.lock",
    generate_build_scripts = True,
    manifests = [
        "//:Cargo.toml",
        "//protos/hello:Cargo.toml",
        "//:server/Cargo.toml",
        "//client:Cargo.toml",
    ],
)

use_repo(crate, "crate")
