[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.11.0"
prost = "0.12"
tokio = { version = "1.38", features = ["full"] }
tokio-macros = { version = "2" }
tokio-stream = "0.1"
async-stream = "0.3"
hello = { path = "../protos/hello" }

[build-dependencies]
tonic-build = "0.11.0"
