[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.11.0"
prost = "0.12"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
tokio-macros = { version = "2" }
async-stream = "0.3"
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.11.0"

